--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
     <title>Ajung's portfolio_subpage</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" type="text/css" href="sub.css">
-    <link rel="stylesheet" href="slick/slick.css">
-    <link rel="stylesheet" href="slick/slick-theme.css">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1,minimum-scale=1">
+
+    <link rel="stylesheet" type="text/css" href="sub.css" />
+    <link rel="stylesheet" href="slick/slick.css" />
+    <link rel="stylesheet" href="slick/slick-theme.css" />
+
     <script src="jquery-3.6.3.min.js"></script>
-    <script src="slick/slick.min.js"></script>
-    <script src="main_js.js"></script>
+    <script src="sub.js"></script>
 </head>
+
 <body>
     <header>
         <div class="sub_menu_wrap">
@@ -22,7 +22,7 @@
                 <li><a href="https://ajungportfolio-sub-profile.netlify.app">PROFILE</a></li>
                 <li class="on"><a href="https://ajungportfolio-sub-web.netlify.app">WEB</a></li>
                 <li><a href="https://ajungportfolio-sub-video.netlify.app">VIDEO</a></li>
-                <li><a href="https://ajungportfolio-sub-history-img.netlify.app">HISTORY</a>
+                <li><a href="#">HISTORY</a>
                     <ul class="sub_menu">
                         <li><a href="https://ajungportfolio-sub-history-img.netlify.app">Image</a></li>
                         <li><a href="https://ajungportfolio-sub-history-web.netlify.app">Web</a></li>
